Initial version 0.01 (simple backtrack)

--- a/SudokuSolver/SudokuSolver.vcxproj
+++ b/SudokuSolver/SudokuSolver.vcxproj
@@ -142,6 +142,7 @@
     <ClCompile Include="SudokuSolver.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BacktrackSolver.h" />
     <ClInclude Include="Solver.h" />
     <ClInclude Include="SolverHelp.h" />
     <ClInclude Include="Sudoku.h" />
